--- a/phoneClients/android/app/src/main/AndroidManifest.xml
+++ b/phoneClients/android/app/src/main/AndroidManifest.xml
@@ -21,14 +21,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.Splash"
         android:usesCleartextTraffic="true">
         <!-- TODO -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="Compose WALIOT"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
